2016-01-29   1.19.0:
--------------------
  * normalize unicode in conda skeleton cran, #681
  * use /bin/sh on openbsd, #707
  * fail early during patching
  * use symlinks=True in copytree() for SVN sources, #665
  * support entry points with dots (to suppoer classes), #690
  * deprecate conda pipbuild in favor of conda skeleton. #710
  * fix Win references to PipBuild scripts, #723
  * allow git shallow clones, #604
  * remove broken license file detection code, about/license_file
    expects filename now
  * allow pinning dependencies when building a package, #741
  * fix to restore building for multiple python versions on Windows, #744
  * fix building (git unrelated things) when git is not installed, #745
  * enable tab completion for the packages argument of the conda inspect
    commands, #748


2015-11-19   1.18.2:
--------------------
  * move path prepending to function for uniformity, #601
  * improve yaml loading, #603
  * allow jinja2 templates to be located in current conda environment, #578
  * fix NPY_VER for versions >= 1.10 (Should be '1.10', not '1.1.0'), #660
  * create jinja2 environment with 'strict' mode for undefined values, #661
  * add a method to shell out and execute a command through subprocess, #621


2015-10-16   1.18.1:
--------------------
  * allow config system to handle versions with have more than a single digit
    in the minor version, #626
  * fix None encoding bug, #614
  * add missing Python version when adding Python to test specs
  * add features to build string
  * improve yaml loading (you don't have to quote version numbers anymore, eg.
    if the version is 3.1), #603


2015-10-01   1.18.0:
--------------------
  * develop options --build_ext, --clean_build_ext, #512
  * fix directory not existing when using --no-include-recipe option
  * add support for multiple rpaths on OS X to conda inspect
  * don't add 'np' to build string when package depends on numpy, but not
    a specific version