@@ -1,0 +1,7 @@
+package:
+  name: conda-build-test-env
+  version: 1.0
+
+build:
+  script_env:
+    - UNDEF_VAR
